修改城市页面布局

--- a/WebContent/crm/member_analysis_city.html
+++ b/WebContent/crm/member_analysis_city.html
@@ -159,59 +159,7 @@
             </div>
         </div>
     </div>
-      
-      <div class="box box-default">
-          <div class="box-body">
-            <div class="col-sm-6">
-              <h4 class="text-light-blue"><strong>安心合作社订单走势</strong></h4>
-              <div class="col-sm-12 no-padding" id="main18" style="height: 260px;"></div>
-            </div>
-            <div class="col-sm-6">
-              <h4 class="text-light-blue"><strong>订单均价走势</strong></h4>
-              <div class="col-sm-12 no-padding" id="main19" style="height: 260px;"></div>
-            </div>
-          </div>
-        </div>
-      <div class="box box-default">
-          <div class="box-body">
-            <div class="col-sm-7">
-              <h4 class="text-light-blue"><strong>安心合作社成交额</strong></h4>
-              <div class="col-sm-12 no-padding" id="main16" style="height: 260px;"></div>
-            </div>
-             <div class="col-sm-5" id="main9" style="height: 260px;"></div>
-          </div>
-        </div>
-      <div class="box box-default">
-          <div class="box-body">
-            <div class="col-sm-6">
-              <h4 class="text-red">最受欢迎商品</h4>
-              <table class="table table-bordered">
-                <tbody id="hotPro_data">
-                <tr>
-                  <th>商品名称</th>
-                  <th>卖出数量</th>
-                  <!-- <th>售卖时长</th> -->
-                  <th>排名</th>
-                </tr>
-                </tbody>
-              </table>
-            </div>
-            <div class="col-sm-6">
-              <h4 class="text-light-blue">无人问津商品</h4>
-              <table class="table table-bordered">
-                <tbody id="coolPro_data">
-                <tr>
-                  <th>商品名称</th>
-                  <th>卖出数量</th>
-                  <!-- <th>售卖时长</th> -->
-                  <th>排名</th>
-                </tr>
-                </tbody>
-              </table>
-            </div>
-          </div>
-        </div>
-      <div class="box box-default">
+       <div class="box box-default">
           <div class="box-body">
           <div class="col-sm-7">
           <div class="box-header h4 text-light-blue"><strong>社员增长趋势</strong></div>
@@ -244,6 +192,56 @@
             <div class="col-sm-6 no-padding" id="main6" style="height: 350px;"></div>
           </div>
        </div>
+      <div class="box box-default">
+          <div class="box-body">
+            <div class="col-sm-6">
+              <h4 class="text-light-blue"><strong>安心合作社订单走势</strong></h4>
+              <div class="col-sm-12 no-padding" id="main18" style="height: 260px;"></div>
+            </div>
+            <div class="col-sm-6">
+              <h4 class="text-light-blue"><strong>订单均价走势</strong></h4>
+              <div class="col-sm-12 no-padding" id="main19" style="height: 260px;"></div>
+            </div>
+          </div>
+        </div>
+      <div class="box box-default">
+          <div class="box-body">
+            <div class="col-sm-7">
+              <h4 class="text-light-blue"><strong>安心合作社成交额</strong></h4>
+              <div class="col-sm-12 no-padding" id="main16" style="height: 260px;"></div>
+            </div>
+             <div class="col-sm-5" id="main9" style="height: 260px;"></div>
+          </div>
+        </div>
+     <!--<div class="box box-default">
+          <div class="box-body">
+            <div class="col-sm-6">
+              <h4 class="text-red">最受欢迎商品</h4>
+              <table class="table table-bordered">
+                <tbody id="hotPro_data">
+                <tr>
+                  <th>商品名称</th>
+                  <th>卖出数量</th>
+                  <th>排名</th>
+                </tr>
+                </tbody>
+              </table>
+            </div>
+            <div class="col-sm-6">
+              <h4 class="text-light-blue">无人问津商品</h4>
+              <table class="table table-bordered">
+                <tbody id="coolPro_data">
+                <tr>
+                  <th>商品名称</th>
+                  <th>卖出数量</th>
+                  <th>排名</th>
+                </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div> -->
+     
       </section>
 
     </div>
@@ -945,7 +943,7 @@ function doMemberSum(){
             //增长曲线图
             showMemberGrow(resultJson);
             //最受欢迎商品、无人问津商品
-            showProduct(resultJson);
+            //showProduct(resultJson);
             //E店情况
             showEshop(resultJson);
 
