--- a/WebContent/crm/user_member_view.html
+++ b/WebContent/crm/user_member_view.html
@@ -211,7 +211,7 @@
 	            <div class="form-group col-lg-4">
 	              <label>门店</label>
 				  <input id="store_id_tradetype" name="store_id_tradetype" type="hidden" value=""/>
-				  <input type="text" class="form-control"  placeholder="门店" id="store_name_tradetype" style="border-radius: 6px; box-shadow: 0 1px 1px rgba(0,0,0,0.3);width: 90%""/>
+				  <input type="text" class="form-control"  placeholder="门店" id="store_name_tradetype" style="border-radius: 6px; box-shadow: 0 1px 1px rgba(0,0,0,0.3);width: 90%"/>
 	              <div class="auto hidden" id="auto_store" style="width:85%;z-index: 99999;">
 	              </div>
 	              <!-- /.input group -->
@@ -245,7 +245,7 @@
 		                      <th width="12%">
 		                      	新增社员数
 		                      	<font id="showattention" style="color:#ffcc00;font-size:14px;font-weight:normal;">！</font>
-	                  			<font id="attention" style="color:#47b8ef;font-size: 12px;white-space: nowrap;position: absolute;top:-8px;z-index: 1000;display:none;left:40px">包含畅购卡升级和199开卡</font>		 
+	                  			<font id="attention" style="color:#47b8ef;font-size: 12px;white-space: nowrap;position: absolute;top:-8px;z-index: 1000;display:none;left:60px">包含畅购卡升级和199开卡</font>		 
 		                      </th>
 		                      <th width="12%">199新增开卡数</th>
 		                      <th width="12%">累计社员总数</th>
@@ -330,7 +330,7 @@
 		                      <th width="12%">
 		                      	新增社员数
 		                      	<font id="showattentioncity" style="color:#ffcc00;font-size:14px;font-weight:normal;">！</font>
-	                  			<font id="attentioncity" style="color:#47b8ef;font-size: 12px;white-space: nowrap;position: absolute;top:-8px;z-index: 1000;display:none;left:40px">包含畅购卡升级和199开卡</font>		 
+	                  			<font id="attentioncity" style="color:#47b8ef;font-size: 12px;white-space: nowrap;position: absolute;top:-8px;z-index: 1000;display:none;left:125px">包含畅购卡升级和199开卡</font>		 
 		                      </th>
 		                      <th width="12%">199新增开卡数</th>
 		                      <th width="12%">累计社员总数</th>
