添加今天样式

--- a/WebContent/crm/user_member_view.html
+++ b/WebContent/crm/user_member_view.html
@@ -156,7 +156,7 @@
       <!-- Main content -->
 
       <section class="content-header">
-        <div class="nav-tabs-custom">
+        <div class="nav-tabs-custom no-margin">
         <div class="pull-right text-red" style="padding-left:15px;font-size:75%">统计数据每10分钟更新一次</div>
           <ul class="nav nav-tabs">
 		              <li class="active" id="tab_1_avtive"><a href="#tab_1" data-toggle="tab" aria-expanded="true">门店单位统计</a></li>
@@ -275,7 +275,7 @@
 							</div>
 							<div class="ui-datepicker-css" id="first-ui-datepicker-css" style="margin: 0px 15px; display: none;">	
 							    <div class="ui-datepicker-quick" id="first-ui-datepicker-quick">
-<!-- 							        <input class="ui-date-quick-button" type="button" value="今天" alt="0"  name=""/> -->
+ 							        <input class="ui-date-quick-button" type="button" value="今天" alt="0"  name=""/> 
 							        <input class="ui-date-quick-button" type="button" value="昨天" alt="-1" name="">
 							        <input class="ui-date-quick-button" type="button" value="7天内" alt="-6" name="">
 							        <input class="ui-date-quick-button" type="button" value="30天内" alt="-29" name="">
