去除多余文字

--- a/WebContent/crm/user_member_view.html
+++ b/WebContent/crm/user_member_view.html
@@ -286,7 +286,7 @@
 							    <div class="ui-datepicker-choose">
 							        <!--<p>自选日期</p>-->
 							        <div class="ui-datepicker-date">
-								            自定<input name="startDateFirst" id="startDateFirst" class="startDate" readonly="" value="2018/07/01" type="text">
+								            <input name="startDateFirst" id="startDateFirst" class="startDate" readonly="" value="2018/07/01" type="text">
 								           到
 							            <input name="endDateFirst" id="endDateFirst" class="endDate" readonly="" value="2018/07/23" type="text">
 							        </div>
