社员邀请统计

--- a/WebContent/crm/current_shopkeeper.html
+++ b/WebContent/crm/current_shopkeeper.html
@@ -186,7 +186,7 @@
                                         <dd><a href="javascript:goToNewAddCustomerGMVToSend()"><span class="fa fa-bar-chart"></span>国安侠用户</a></dd>
                                         <dd><a href="javascript:goToSendOrders()"><span class="fa fa-calendar-check-o"></span>国安侠送单量</a></dd>
                                         <dd><a href="javascript:goToRewardtimes()"><span class="fa fa-thumbs-o-up"></span>国安侠好评次数</a></dd>
-                                        <dd><a href="javascript:goToInvitationMember()"><span class="fa fa-thumbs-o-up"></span>社员开卡统计</a></dd>
+                                        <dd><a href="javascript:goToInvitationMember()"><span class="fa fa-thumbs-o-up"></span>社员邀请统计</a></dd>
                                     </dl>
                                     <dl class="col-sm-3">
                                         <dt><i></i>档案数据</dt>
