社员邀请统计-加‘新’

--- a/WebContent/crm/current_shopkeeper.html
+++ b/WebContent/crm/current_shopkeeper.html
@@ -168,7 +168,9 @@
                 <div class="logo-lg">
                     <ul class="no-padding no-margin">
                         <li class="current">
-                            <em>数据运营<i class="glyphicon glyphicon-triangle-bottom"></i></em>
+                            <em>数据运营<i class="glyphicon glyphicon-triangle-bottom"></i>
+                                <img alt="" src="dist/img/new_1.gif" style="position:absolute;right:-10px; top:5px; width:25px; height:19px;">
+                            </em>
                             <div class="TDsec-nav">
                                 <div class="secNav-box">
                                     <dl class="col-sm-3">
@@ -186,7 +188,8 @@
                                         <dd><a href="javascript:goToNewAddCustomerGMVToSend()"><span class="fa fa-bar-chart"></span>国安侠用户</a></dd>
                                         <dd><a href="javascript:goToSendOrders()"><span class="fa fa-calendar-check-o"></span>国安侠送单量</a></dd>
                                         <dd><a href="javascript:goToRewardtimes()"><span class="fa fa-thumbs-o-up"></span>国安侠好评次数</a></dd>
-                                        <dd><a href="javascript:goToInvitationMember()"><span class="fa fa-thumbs-o-up"></span>社员邀请统计</a></dd>
+                                        <dd style="position: relative;"><a href="javascript:goToInvitationMember()"><span class="fa fa-thumbs-o-up"></span>社员邀请统计</a>
+                                        <img alt="" src="dist/img/new_1.gif" style="position:absolute; top:5px; width:25px; height:19px;"></dd>
                                     </dl>
                                     <dl class="col-sm-3">
                                         <dt><i></i>档案数据</dt>
