--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -368,6 +368,7 @@
             <div class="info_bottom_dl info_bottom_left pull-right col-sm-4 no-margin" style="display: none;">
               <h4 class="gaugetb4">历史累计成交单量</h4>
 			  <input type="hidden" id="tradesumofhistoryOrderHid">
+			  <input type="hidden" id="tradesumOrderofyearHid">
               <div class="col-sm-4 no-padding gaugetb4" id="tradesumofhistoryOrder"></div>
             </div>
           </div>
