修改列表展示顺序

--- a/WebContent/data_access/observe_parameter_view.html
+++ b/WebContent/data_access/observe_parameter_view.html
@@ -49,7 +49,7 @@ $(function () {
 						}
 					},false);
     //页面加载成功后需要获取数据
-   // searchList();
+    searchList();
     $(".operateHeader").width("5%");
     
     var min= new Date();
